Ajustado rotas com resolvers e adicionado fontawesome

--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -1,7 +1,7 @@
 <!-- Title-->
 <ion-view title="Visatão" hide-back-button="true">
   <!-- Controller -->
-  <ion-content class="padding" ng-controller="FPCtrl">
+  <ion-content class="padding">
 
     <label class="item item-input">
       <i class="icon ion-search placeholder-icon"></i>
@@ -11,7 +11,7 @@
 
     <!-- Lista dos horários -->
     <ion-list>
-      <ion-item ng-repeat="(key, item) in linesList | filter:searchString" ng-click="show(key)" ui-sref="show">
+      <ion-item ng-repeat="item in linesList | filter:searchString" ui-sref="show(item)">
           <h2 ng-bind-html="item.descricao"></h2>
       </ion-item>
     </ion-list>
