--- a/www/templates/show.html
+++ b/www/templates/show.html
@@ -15,15 +15,15 @@
       </div>
     </div>
     <!-- LISTA HORARIOS -->
-    <ion-list>
-      <div class="row" ng-repeat="item in horariosList">
-        <div class="col col-70 item item-text-wrap">{{item.destino}}</div>
-        <div class="col col-20 item">{{item.hora  | limitTo: 5 }}</div>
-        <div class="col col-10 item">
-          <i class="fa fa-wheelchair" ng-show="item.elevador == '*'"></i>
-          <i class="fa fa-minus" ng-show="item.elevador != '*'"></i>
-        </div>
-      </div>
-    </ion-list>
+    <div class="list">
+      <a class="item item-icon-left" ng-repeat="itinerary in itineraries" ui-sref="show_itinerary({id: line.id, idItinerary: itinerary.itinerario})">
+        <i class="icon ion-ios-location-outline"></i>
+        <h2>{{ itinerary.destino }}</h2>
+        <p>
+          <i class="fa fa-wheelchair" ng-show="itinerary.elevador == '*'"></i>
+          {{itinerary.hora  | limitTo: 5 }}
+        </p>
+      </a>
+    </div>
   </ion-content>
 </ion-view>
