Adicionado metodo para verificar se uma linha está em cache

--- a/www/templates/list.html
+++ b/www/templates/list.html
@@ -11,9 +11,10 @@
 
     <!-- Lista dos horários -->
     <ion-list>
-      <ion-item ng-repeat="item in linesList | filter:searchString" ui-sref="show(item)">
+      <ion-item ng-repeat="item in linesList | filter:searchString" ui-sref="show(item)" ng-class="{'cached' : isCachedLine(item)}">
           <h2 ng-bind-html="item.descricao"></h2>
       </ion-item>
     </ion-list>
   </ion-content>
+
 </ion-view>
