--- a/www/templates/show.html
+++ b/www/templates/show.html
@@ -3,9 +3,9 @@
   <ion-content class="padding">
     LINHA: {{ line.descricao }}
     <br/>
-    HORARIO: {{nome_horario}}
+    HORARIO: {{schedule_for_day.text}}
     <br/>
-    TABELA: {{nome_tabela}}
+    TABELA: {{type_day.text}}
     <!-- CABEÇALHO TABELA -->
       <div class="row">
         <div class="col col-100">Itinerários e Horários</div>
